# mig

./: .gitignore  CMakeLists.txt  README.md  README.org
III-programming/: CMakeLists.txt
III-programming/algorithm-archetypes/divide-and-conquer/: CMakeLists.txt  binary-search.cpp
III-programming/algorithm-archetypes/dynamic-programming/: CMakeLists.txt  diff.cpp  diff.html  diff.org  exercises.html  exercises.org
III-programming/algorithm-archetypes/exercises/: CMakeLists.txt  ex-dynamic-programming.org  exercises.html  exercises.org  exercises.tex
III-programming/data-structures-and-libraries/: CMakeLists.txt
III-programming/data-structures-and-libraries/exercises/: CMakeLists.txt  closestPointPair.cpp  convexHull.cpp  problem.html  problem.odt  problem.org  problem.tex  segment-tree.cpp
III-programming/data-structures-and-libraries/exercises/bipartite-graph/: bfs.cpp  dfs.cpp  union-find.cpp
III-programming/data-structures-and-libraries/exercises/design-browser-history/: browser-history-solution.cpp  problem.html  problem.org
III-programming/data-structures-and-libraries/exercises/reverse-pairs/: CMakeLists.txt  binary-search-merge-sort.cpp  merge-sort.cpp  reverse-pairs.cpp  reverse-pairs.html  reverse-pairs.org  segment-tree.cpp
III-programming/data-structures-and-libraries/n-queens/: CMakeLists.txt  n-queens.cpp
III-programming/data-structures-and-libraries/std-vector/: CMakeLists.txt  std-vector-usage.cpp
III-programming/util/generate/: generate.cpp  generate.h
III-programming/util/string/: trim.cpp
(+33 files in other folders)
